tests/errors/futurebraces.pyx
# mode: error

from __future__ import braces

_ERRORS = u"""
3:23: not a chance
"""
